# ros-cmake-analyzer

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/ros_cmake_analyzer/: __init__.py  core.py  decorator.py  extractor.py  main.py  model.py  ros1.py  ros2.py  utils.py
src/ros_cmake_analyzer/cmake_parser/: parser.py
src/ros_cmake_analyzer/core/: nodelets_xml.py  package.py
src/ros_cmake_analyzer/core/package_xml/: condition.py  group_dependency.py  group_membership.py  package.py  python_setup.py
tests/: test_package.py  test_simple_project.py
